--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,7 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  border: 1px solid rgb(5, 104, 196);
+  border: 2px solid rgba(250, 124, 183, 0.623);
   padding:  50px;
   background-color: rgb(245, 244, 243);
 }
@@ -15,12 +15,31 @@
   margin-top: -10px;
 
 }
+
+.title-inicio{
+  font-size:larger;
+  color:rgb(151, 1, 63);
+}
 .enlaceRegister{
   font-size: x-small;
 }
 .checkbox{
   font-size: small;
 }
-.navbar{
-  background-color:rgb(5, 104, 196);
+.navbar-light{
+  background-color:rgb(151, 1, 63);
+  text-decoration-color: aliceblue;
+}
+.btn-outline-danger{
+
+  background-color:rgb(245, 244, 243);
+}
+.btn-primary{
+  background-color:rgb(151, 1, 63);
+  border-color: rgba(250, 124, 183, 0.623);
+}
+.btn-primary:hover {
+  background: rgb(255, 0, 98);
+  border-color: rgba(250, 124, 183, 0.623);
+  color:white
 }
