--- a/client/src/crearTipoUsuario.css
+++ b/client/src/crearTipoUsuario.css
@@ -1,12 +1,16 @@
-.crearTipoUsuario{
+.campoTipo{
     text-align: center;
-
+    
     
 }
+
 .creado{
     height: 300px;
     width: 300px;
 
+}
+.row{
+    text-align: center;
 }
 
 .textArea{
@@ -15,3 +19,48 @@
     width: 300px;
 
 }
+.col-md-3{
+    text-align: center;
+}
+.navbar{
+    width: 100%;
+    color: aliceblue;
+    background-color:rgb(2, 129, 146);
+  text-decoration-color: aliceblue;
+}
+
+.navbar-light{
+    background-color:rgb(2, 129, 146);
+    text-decoration-color: aliceblue;
+}
+.navbar-expand-lg{
+    background-color:rgb(2, 129, 146);
+    text-decoration-color: aliceblue;
+
+}
+.btn-primary{
+    background-color:rgb(2, 129, 146);
+    border-color: rgba(124, 210, 250, 0.623);
+    
+}
+  .btn-primary:hover {
+    background: rgb(0, 174, 255);
+    border-color: rgba(124, 210, 250, 0.623);
+    color:white;
+  }
+  .btn-primary:active {
+    background: rgb(2, 173, 185);
+    border-color: rgba(124, 210, 250, 0.623);
+    color:white;
+    
+    
+  }
+  .pull-left{
+    margin-left: 10px;
+    min-width: 200px
+    ;
+  }
+  .pull-right{
+    margin-right: 10px;
+    min-width: 200px;
+  }
