--- a/client/src/components/createTypeUser/crearTipoUsuario.css
+++ b/client/src/components/createTypeUser/crearTipoUsuario.css
@@ -1,9 +1,10 @@
 .campoTipo{
-    text-align: center;
-    
-    
+    text-align: center;   
 }
+.formC{
+text-align: center;
 
+}
 .creado{
     height: 300px;
     width: 300px;
@@ -57,8 +58,9 @@
   }
   .pull-left{
     margin-left: 10px;
-    min-width: 200px
-    ;
+    min-width: 200px;
+    background-color:rgb(245, 244, 243);
+    
   }
   .pull-right{
     margin-right: 10px;
