Se corrigio bug de espacios en el nombre de usuario del login

--- a/client/src/components/login/Login.css
+++ b/client/src/components/login/Login.css
@@ -61,6 +61,15 @@
 #avisoNo{
   display: none;
 }
+#avisoPendiente{
+  display: none;
+}
+#avisoReachazado{
+  display: none;
+}
+#avisoDeshabilitado{
+  display: none;
+}
 @media(max-width:360px){
   .containerPrincipal {
     width: 80%;
