--- a/client/src/components/solicitudes/Solicitudes.css
+++ b/client/src/components/solicitudes/Solicitudes.css
@@ -101,5 +101,66 @@
 #cl{
   text-align: left;
 }
+.selector{
+
+  width: 22%;
+  position: absolute;
+  left: 45%;
+  top: 43px;
+}
+.ms-formlabel{
+  display: block;
+}
+.solicitud-label {
+  left: 30%;
+  position: absolute;
+  font-size: 1.2 rem;
+  font-weight: 400;
+  top: 40px;
+}
+
+.tableSol {
+ 
+  left: 12%;
+  position: absolute;
+  width: 100%;
+  height: 10%;
+  top: 5%;
+}
+.containerTabla {
+  
+  position: absolute;
+  width:  90%;
+  height: 2px;
+  left: 50%;
+  top: 400px;
+  transform: translate(-50%, -50%);
+ 
+  padding:  200px;
+  
+}
+
+.containerSelect {
+  
+  position: absolute;
+  width:  90%;
+  height: 20px;
+  left: 53%;
+  top: 300px;
+  transform: translate(-50%, -50%);
+  padding:  200px;
+}
 
 
+.table {
+  position: absolute;
+  background-color: rgba(238, 238, 238, 0.952);
+
+  
+  left: 0%;
+  top: 0%;
+ 
+}
+.table-responsive {
+  height: 100%;
+}
