--- a/client/src/components/createAccount/newAccount.css
+++ b/client/src/components/createAccount/newAccount.css
@@ -11,6 +11,10 @@
     background-color: rgb(245, 244, 243);
     
   }
+  .registerForm{
+    text-align: center;
+    
+  }
   
   .containerSecundario{
   
@@ -92,4 +96,7 @@
     .logo{
       padding: 50px 50px;
     }
+  }
+  .city{
+    text-align: center;
   }
