--- a/client/src/components/menuAdmin/menu.css
+++ b/client/src/components/menuAdmin/menu.css
@@ -36,10 +36,12 @@
     text-decoration:none;
 }
 .mostrar{
-	right: 0;
+    transition: all 1s;
+    right: 0;
+    
 }
 #btn-menu{
-    width: 40;
+    
     border-radius: 5px;
     border:  rgb(226, 229, 231) 1px solid;
     cursor: hand;
