--- a/client/src/components/administrarPermisos/administrarPermisos.css
+++ b/client/src/components/administrarPermisos/administrarPermisos.css
@@ -1,3 +1,5 @@
+
+
 #textoArea{
   height: 250px;
 }
@@ -13,4 +15,22 @@
 
 .modal-footer{
     background-color: rgb(2, 173, 185)
+}
+
+#asignados{
+    margin: 0.5em;
+}
+
+#permisos{
+    margin: 0.5em;
+}
+#listaPermisos{
+    border-collapse: separate;
+    border: 3px solid rgb(2, 129, 146);
+    border-radius: 10px;
+    text-align: left;
+    width: 100%;
+}
+#con{
+    margin: 0.5em;
 }
