--- a/client/src/components/menuAdmin/menu.css
+++ b/client/src/components/menuAdmin/menu.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans&family=Open+Sans+Condensed:wght@300&family=Quicksand:wght@500&display=swap');
 .nav{
 	position: absolute;
 	top: 62px;
 	right: -100%;
-	width: 218px;
+	width: 227px;
     transition: all 0.5s;
     margin-right: 0;
     
@@ -14,6 +15,9 @@
     z-index: 100;
     background:rgba(12, 12, 12, 0.411);;
     border-radius: 3px;
+    font-family: 'DM Sans', sans-serif;
+    /*font-family: 'Open Sans Condensed', sans-serif;*/
+    width: 230px;
 }
 
 .menu__link{
