redirecionamiento del logo y ajuste en menu

--- a/client/src/components/menuAdmin/menu.css
+++ b/client/src/components/menuAdmin/menu.css
@@ -2,7 +2,7 @@
 .nav{
 	position: absolute;
 	top: 62px;
-	right: -100%;
+	right: -230px;
 	width: 227px;
     transition: all 0.5s;
     margin-right: 0;
