se agrego los tipos de usuario

--- a/client/src/components/createAccount/newAccount.css
+++ b/client/src/components/createAccount/newAccount.css
@@ -86,7 +86,7 @@
   display: none;
 }
 #avisoVacio{
-  display: none;
+  display: none;  
 }
 #avisoNo{
   display: none;
@@ -99,6 +99,21 @@
 }
 #avisoDeshabilitado{
   display: none;
+}
+#avisoCorrecto{
+  display: none;
+  margin-left: 100px;
+  position: absolute;
+}
+#avisoNuevo{
+  display: none;
+  margin-left: 75px;
+  position: absolute;
+}
+#avisoPass{
+  display: none;
+  margin-left: 75px;
+  position: absolute;
 }
 @media(max-width:360px){
   .contenedor {
