campos vacios rojos

--- a/client/src/components/createAccount/newAccount.css
+++ b/client/src/components/createAccount/newAccount.css
@@ -51,6 +51,14 @@
   border: black;*/
     
 }
+.imput:invalid {
+  border-color: #dc3545;
+  padding-right: calc(1.5em + .75rem);
+  
+  background-repeat: no-repeat;
+  background-position: right calc(.375em + .1875rem) center;
+  background-size: calc(.75em + .375rem) calc(.75em + .375rem);
+}
 
 .radio{
   margin-left: 1px;
