--- a/client/src/components/createAccount/newAccount.css
+++ b/client/src/components/createAccount/newAccount.css
@@ -50,13 +50,13 @@
   /*border-radius: 5px;
   border: black;*/
 }
-.imput:invalid {
+.input-error:invalid {
   border-color: #dc3545;
   padding-right: calc(1.5em + .75rem);
   
-  background-repeat: no-repeat;
+  /*background-repeat: no-repeat;
   background-position: right calc(.375em + .1875rem) center;
-  background-size: calc(.75em + .375rem) calc(.75em + .375rem);
+  background-size: calc(.75em + .375rem) calc(.75em + .375rem);*/
 }
 
 .radio{
