Se alinearon los espacios en campo Genero

--- a/client/src/components/createAccount/newAccount.css
+++ b/client/src/components/createAccount/newAccount.css
@@ -201,8 +201,21 @@
       position: absolute;
       left: 45%;
       top: 43px;
-    }
-    
-    
+    }  
+}
+.genero{
+  margin-right: 5px;
+}
+.form-check-input{
+  margin-right: 100px;
+}
+.form-check-inputM{
+  margin-right: 5px;
+}
+.form-check-inputF{
+  margin-right: 5px;
+}
+.form-check-label{
+  margin-right: 10px;
 }
 
