se arreglaron las posiciones del checkbox

--- a/client/src/components/createAccount/newAccount.css
+++ b/client/src/components/createAccount/newAccount.css
@@ -1,4 +1,4 @@
-.containerPrincipal {
+/*.containerPrincipal {
   
   position: absolute;
   
@@ -10,14 +10,26 @@
   margin-top: 25px;
   background-color: rgb(245, 244, 243);
   
+}*/
+.form-register{
+  padding:  50px;
+  width: 50%;
+  background-color: rgb(245, 244, 243);
+  margin: auto;
+  text-align: left;
 }
-.registerForm{
+.col{
+  width: 100%;
   text-align: center;
+}
+.from-group{
+  margin-left: 0;
+  text-align: auto;
   
 }
 
-.contenedor{
-
+/*.contenedor{
+ 
   text-align: left;
   margin-top: 1px;
   margin-right: 500px;
@@ -30,25 +42,31 @@
   padding:  50px;
   margin-top: 300px;
   background-color: rgb(245, 244, 243);
-
-}
+}*/
 
 .titulo-registro{
   
-  color:rgb(2, 129, 146);;
+  color:rgb(2, 129, 146);
+  margin: auto;
+}
+.contenedor-btn{
+  margin: auto;
+  text-align: center;
 }
 
 .checkbox-confirmar{
   font-size: small;
-  margin-left: 68px;
-}
-.imput{
   text-align: center;
-  margin-right: 10px;
-  display: inline-block;
-  width: 340px;
-  /*border-radius: 5px;
-  border: black;*/
+  /*margin-left: 68px;*/
+}
+
+.input-error:invalid {
+  border-color: #dc3545;
+  padding-right: calc(1.5em + .75rem);
+  
+  /*background-repeat: no-repeat;
+  background-position: right calc(.375em + .1875rem) center;
+  background-size: calc(.75em + .375rem) calc(.75em + .375rem);*/
 }
 
 .radio{
@@ -61,19 +79,27 @@
 }
 .btn-aceptar{
 
-  background-color:rgb(245, 244, 243);
+  background-color:rgb(252, 248, 244);
   margin-left: 75px;
-  border-color: rgba(2, 2, 2, 0.623);
-  width: 200px;
+  border-color: rgb(2, 129, 146);
+  width: 150px;
+  margin: auto 10px;
+  color: rgb(2, 129, 146);
 }
 .btn-cancelar{
   background-color:rgb(2, 129, 146);
   border-color: rgba(124, 210, 250, 0.623);
-  width: 200px;
+  width: 150px;
   margin-left: 75px;
   color: white;
+  margin: auto 5px;
 }
 .btn-cancelar:hover {
+  background: rgb(0, 174, 255);
+  border-color: rgba(124, 210, 250, 0.623);
+  color:white
+}
+.btn-aceptar:hover {
   background: rgb(0, 174, 255);
   border-color: rgba(124, 210, 250, 0.623);
   color:white
@@ -103,7 +129,7 @@
 }
 #avisoCorrecto{
   display: none;
-  margin-left: 95px;
+  margin-left: 190px; /*75 190*/
   position: absolute;
 }
 #avisoNuevo{
@@ -113,30 +139,54 @@
 }
 #avisoPass{
   display: none;
-  margin-left: 62px;
+  margin-left: 154px; /*62 154*/
   position: absolute;
 }
-@media(max-width:360px){
-  .contenedor {
-    width: 80%;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    border: 2px solid rgba(124, 210, 250, 0.623);
-    padding:  20px;
-    margin-left: 0;
-    margin-right: 0;
+@media(max-width:950px){
+  .form-register{
+    padding:  50px;
+    width: 65%;
     background-color: rgb(245, 244, 243);
+    margin: auto;
+    
+  }
+  .btn-aceptar{
 
+    background-color:rgb(245, 244, 243);
+    margin-left: 75px;
+    border-color: rgb(2, 129, 146);
+    width: 120px;
+    margin: auto 5px;
+    margin-bottom:5px ;
+    color: rgb(2, 129, 146);
+  }
+  .btn-cancelar{
+    background-color:rgb(2, 129, 146);
+    border-color: rgba(124, 210, 250, 0.623);
+    width: 120px;
+    margin-left: 75px;
+    color: white;
+    margin: auto 5px;
+    margin-bottom:5px ;
+  }
+
+}
+@media(max-width:408px){
+  
+  .form-register{
+    padding:  10px;
+    width: 90%;
+    background-color: rgb(245, 244, 243);
+    margin: auto;
     
   }
   
-  
-  .logo{
+  /*.logo{
     padding: 50px 50px;
+  }*/
+  .contenedor-btn{
+    margin: auto;
   }
-
 
   .solicitud-label {
       left: 30%;
@@ -154,5 +204,4 @@
     }
     
     
-  }
-
+}
