--- a/client/src/components/createAccount/newAccount.css
+++ b/client/src/components/createAccount/newAccount.css
@@ -171,3 +171,18 @@
     
     
 }
+.genero{
+  margin-right: 5px;
+}
+.form-check-input{
+  margin-right: 100px;
+}
+.form-check-inputM{
+  margin-right: 5px;
+}
+.form-check-inputF{
+  margin-right: 5px;
+}
+.form-check-label{
+  margin-right: 10px;
+}
